--- a/WebExt/src/popup/popup.html
+++ b/WebExt/src/popup/popup.html
@@ -2,8 +2,22 @@
 <html>
   <head>
     <script src="popup.js" type="text/javascript"></script>
+    <link href="popup.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h3>Hello host</h3>
+    <div class="main-content-container">
+      <h2>Native host demo</h2>
+      <div class="from-native-container">
+        <p>From Native</p>
+        <textarea id="from-native-text"></textarea>
+      </div>
+      <div class="to-native-container">
+        <p>To Native</p>
+        <div class="to-native-send">
+          <input id="to-native-text"></input>
+          <button>Send</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
