add windows hello authentication

--- a/Web/src/WebExt/popup/popup.html
+++ b/Web/src/WebExt/popup/popup.html
@@ -25,6 +25,12 @@
           <button id="to-native-btn">Send</button>
         </div>
       </div>
+      <div class="authenticate-container">
+        <button id="auth-win-btn">
+          <span id="auth-btn-text">Authenticate by Windows Hello</span>
+          <span class="loader hide" id="auth-btn-loader"></span>
+        </button>
+      </div>
     </div>
     <script src="popup.js" type="text/javascript"></script>
   </body>
