windows hello auth on popup

--- a/Web/src/WebExt/popup/popup.html
+++ b/Web/src/WebExt/popup/popup.html
@@ -8,7 +8,9 @@
       <h2><a id="popup-link" href="#">Native host demo</a></h2>
       <div class="tab">
         <button class="tab-link active" id="tab-port">Port Mode</button>
+        <!--
         <button class="tab-link" id="tab-message">Message Mode</button>
+        -->
       </div>
       <div id="port-controls">
         <button class="port-btn" id="port-btn-connect">Connect</button>
@@ -26,7 +28,7 @@
         </div>
       </div>
       <div class="authenticate-container">
-        <button id="auth-win-btn">
+        <button class="normal" id="auth-win-btn">
           <span id="auth-btn-text">Authenticate by Windows Hello</span>
           <span class="loader hide" id="auth-btn-loader"></span>
         </button>
