--- a/Web/src/WebApp/public/index.html
+++ b/Web/src/WebApp/public/index.html
@@ -4,6 +4,15 @@
     <link href="index.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <div class="main-content-container">
+      <h2 id="caption">Please login</h2>
+      <div class="authenticate-container">
+        <button class="normal" id="auth-win-btn">
+          <span id="auth-btn-text">Authenticate by Windows Hello</span>
+          <span class="loader hide" id="auth-btn-loader"></span>
+        </button>
+      </div>
+    </div>
     <script src="index.js" type="text/javascript"></script>
   </body>
 </html>
